<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddInfoActivity">

    <LinearLayout
        android:id="@+id/linearLayout_term_type"
        android:layout_width="361dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/priority_type_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            app:chipSpacingHorizontal="40dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_low"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/low" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_medium"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/medium" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_high"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/high" />

        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/linearLayoutClassType"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/class_type_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            app:chipSpacingHorizontal="20dp"
            app:singleSelection="true">


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_assignment"
        android:textColor="#DE000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <HorizontalScrollView
        android:id="@+id/linearLayoutAssignmentType"
        android:layout_width="361dp"
        android:layout_height="47dp"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/assignment_type_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            app:chipSpacingHorizontal="40dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_Quiz"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/quiz" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_Reading"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/reading" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_project"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/project" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_class"
        android:textColor="#DE000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_priority"
        android:textColor="#DE000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="341dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027">


        <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="341dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Due Date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:background="@android:color/primary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />
</androidx.constraintlayout.widget.ConstraintLayout>